--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.0",
     "@tanstack/react-query": "^5.48.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
+    "express": "^4.21.0",
     "framer-motion": "^11.3.9",
     "html-to-image": "^1.11.11",
     "input-otp": "^1.2.4",
@@ -75,5 +78,10 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^5.1.4"
-  }
+  },
+  "description": "## Project info",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
